# inspur-x86-power-control

./: .gitignore  MAINTAINERS  Makefile.am  argument.cpp  argument.hpp  chassis_control.cpp  chassis_control.hpp  configure.ac  evdev.cpp  evdev.hpp  file.hpp  gen-power-control-defs.py  gpio.cpp  gpio.hpp  main.cpp  types.hpp
example/: gpiodefs.yaml
